added banana translator

--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,15 @@
             <a class="link primary-link" href="https://github.com/Makhijaharshit/Mark2-marvelquiz">Source Code</a>
 
         </li>
+        <li>
+            <div class="container container-centre">
+            <h1>Do you want to the language that minions speak</h1>
+            <small>December 1,2022</small>
+            <p>This is a translator of banana language<strong>vanilla.JS</strong></p>
+            <a class="link primary-link" href="https://minionspeakharshit.netlify.app">Live Project</a>
+            <a class="link primary-link" href="https://github.com/Makhijaharshit/Banana-app">Source Code</a>
+
+        </li>
     </ul>
 </body>
 </html>
