small mistake resolved

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
         <hr>
         <li>
             <div class="container container-centre">
-            <h1>Do you want to the language that minions speak</h1>
+            <h1>Do you want to know the language that minions speak</h1>
             <small>December 1,2022</small>
             <p>This is a translator of banana language<strong>vanilla.JS</strong></p>
             <a class="link primary-link" href="https://minionspeakharshit.netlify.app">Live Project</a>
