--- a/projects.html
+++ b/projects.html
@@ -52,9 +52,19 @@
             <div class="container container-centre">
             <h1>Do you want to know the language that minions speak</h1>
             <small>December 1,2022</small>
-            <p>This is a translator of banana language<strong>vanilla.JS</strong></p>
+            <p>This is a translator of banana language created with<strong>vanilla.JS</strong></p>
             <a class="link primary-link" href="https://minionspeakharshit.netlify.app">Live Project</a>
             <a class="link primary-link" href="https://github.com/Makhijaharshit/Banana-app">Source Code</a>
+
+        </li>
+        <hr>
+        <li>
+            <div class="container container-centre">
+            <h1>Do you want to know the language that ferb speaks</h1>
+            <small>December 7,2022</small>
+            <p>This is a translator of ferb-latin language created with<strong>vanilla.JS</strong></p>
+            <a class="link primary-link" href="https://ferblatintranslator-harshit.netlify.app">Live Project</a>
+            <a class="link primary-link" href="https://github.com/Makhijaharshit/ferb-latin">Source Code</a>
 
         </li>
     </ul>
